concurrent functions with list parameters
retrieve_cui_info and retrieve_cuis can take in a list of ids now. The requests in them sent concurrently so as to make it faster.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "umls_api_client"
-version = "0.0.4"
+version = "0.0.5"
 authors = [
   { name="Naveen Jayakody", email="naveenjayakody12@gmail.com" },
 ]
@@ -13,6 +13,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
   "requests",
+  "ratelimit",
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
